# endeza_ws

./: memo.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pendulum/lib/pendulum/: pendulum
install/pendulum/share/pendulum/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/q2rpy/lib/q2rpy/: q2qpy
install/q2rpy/share/q2rpy/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build  latest_list
src/camera_move/: package.xml  setup.cfg  setup.py
src/camera_move/camera_move/: camera_move.py
src/pendulum/: package.xml  setup.py
src/pendulum/pendulum/: pendulum.py
src/q2rpy/: CMakeLists.txt  package.xml
src/q2rpy/src/: q2qpy.cpp
